--- a/android/huyenhoc/res/layout/change.xml
+++ b/android/huyenhoc/res/layout/change.xml
@@ -3,130 +3,119 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/background"
-    android:gravity="center_horizontal"
+    android:gravity="center_horizontal|center_vertical"
     android:orientation="vertical"
     android:padding="3px" >
 
-    <LinearLayout         
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center_vertical">
+        android:orientation="horizontal"
+        android:paddingLeft="10dip"
+        android:id="@+id/btnBack" >
+
+        <com.candroid.huyenhoc.Text
+            android:layout_width="wrap_content"
+            android:layout_height="60dip"
+            android:gravity="center"
+            android:text="@string/lt"
+            android:textColor="#7f0000"
+            android:textSize="40dip" />
+
+        <com.candroid.huyenhoc.Text
+            android:layout_width="wrap_content"
+            android:layout_height="60dip"
+            android:paddingLeft="5dip"
+            android:text="@string/btnchange"
+            android:textColor="#7f0000"
+            android:textSize="30dip"
+            android:gravity="center_vertical" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" 
+        android:gravity="center_vertical"
+        android:layout_marginTop="-40dip">
+
+        <com.candroid.huyenhoc.Text
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/solar"
+            android:textColor="#7f0000"
+            android:textSize="32dip" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/scroll_full"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingLeft="30dip"
+            android:paddingRight="20dip" >
+
+            <kankan.wheel.widget.WheelView
+                android:id="@+id/txtDaySolar"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <kankan.wheel.widget.WheelView
+                android:id="@+id/txtMonthSolar"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <kankan.wheel.widget.WheelView
+                android:id="@+id/txtYearSolar"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="2" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
             <com.candroid.huyenhoc.Text
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/btnchange"
+                android:gravity="center"
+                android:text="@string/lunar"
                 android:textColor="#7f0000"
-                android:textSize="40dip" 
-                android:gravity="left"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="@drawable/scroll_full"
-        android:orientation="horizontal"
-        android:paddingLeft="30dip"
-        android:paddingRight="20dip"
-        android:gravity="center_vertical" >
+                android:textSize="32dip" />
+        </LinearLayout>
 
-		<kankan.wheel.widget.WheelView 
-		    android:id="@+id/txtDaytochange"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-        <kankan.wheel.widget.WheelView 
-            android:id="@+id/txtMonthtochange"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-        <kankan.wheel.widget.WheelView 
-            android:id="@+id/txtYeartochange"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"/>  
-    </LinearLayout>
-
-	<LinearLayout
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:orientation="vertical"
-		android:layout_weight="1"
-		android:gravity="center_vertical">
-		<com.candroid.huyenhoc.Text
-			android:id="@+id/txtSolar"
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/solartolunar"
-            android:textColor="#7f0000"
-            android:textSize="32dip" 
-            android:gravity="center"/>
-		<com.candroid.huyenhoc.Text
-            android:id="@+id/txtLunar"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/lunartosolar"
-            android:textSize="32dip"
-            android:gravity="center"
-            android:textColor="#ccc" />
-    </LinearLayout>
+            android:background="@drawable/scroll_full"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingLeft="30dip"
+            android:paddingRight="20dip" >
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="@drawable/scroll_full"
-        android:orientation="horizontal"
-		android:paddingLeft="30dip"
-        android:paddingRight="20dip"
-        android:gravity="center_vertical" >
-        
-		<TextView
-            android:id="@+id/txtChangedDay"
-            android:layout_width="0dip"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:textColor="#7f0000"
-            android:textSize="32dip"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/txtChangedMonth"
-            android:layout_width="0dip"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:textColor="#7f0000"
-            android:textSize="32dip"
-            android:textStyle="bold" />
+            <kankan.wheel.widget.WheelView
+                android:id="@+id/txtDayLunar"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
-        <TextView
-            android:id="@+id/txtChangedYear"
-            android:layout_width="0dip"
-            android:layout_height="fill_parent"
-            android:layout_weight="2"
-            android:gravity="center_vertical|center_horizontal"
-            android:textColor="#7f0000"
-            android:textSize="32dip"
-            android:textStyle="bold" />
-    </LinearLayout>
+            <kankan.wheel.widget.WheelView
+                android:id="@+id/txtMonthLunar"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center_vertical|center_horizontal"
-        android:orientation="horizontal" >
-
-        <com.candroid.huyenhoc.Btn
-            android:id="@+id/btnChange"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/hoan_thanh_button"
-            android:text="@string/btnchange"
-            android:textColor="#fff"
-            android:textSize="24dip" />
+            <kankan.wheel.widget.WheelView
+                android:id="@+id/txtYearLunar"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="2" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
