--- a/android/huyenhoc/res/layout/mainmenu.xml
+++ b/android/huyenhoc/res/layout/mainmenu.xml
@@ -17,7 +17,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:background="@drawable/stripe"
-            android:orientation="vertical">
+            android:orientation="vertical" >
         </LinearLayout>
     </LinearLayout>
 
@@ -38,6 +38,22 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:paddingRight="5dip" >
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="0dip"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal" >
+
+                <com.candroid.huyenhoc.Btn
+                    android:id="@+id/btnIntro"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/main_button"
+                    android:text="@string/btnhot"
+                    android:textColor="#fff"
+                    android:textSize="22dip" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -83,22 +99,6 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/main_button"
                     android:text="@string/btnsetting"
-                    android:textColor="#fff"
-                    android:textSize="22dip" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="0dip"
-                android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal" >
-
-                <com.candroid.huyenhoc.Btn
-                    android:id="@+id/btnIntro"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/main_button"
-                    android:text="@string/btnintro"
                     android:textColor="#fff"
                     android:textSize="22dip" />
             </LinearLayout>
