--- a/trunk/android/Euro2012/res/layout/news.xml
+++ b/trunk/android/Euro2012/res/layout/news.xml
@@ -12,7 +12,7 @@
         <TextView android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center_vertical|center_horizontal"
-            android:text="@string/schedule"
+            android:text="@string/news"
             android:textColor="#fff"
             android:textSize="28dip"/>
     </LinearLayout>
@@ -41,13 +41,12 @@
                 android:id="@+id/btnSchedule"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/scheduleactive" />
+                android:background="@drawable/btnschedule" />
             <TextView 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/schedule"
-                android:textSize="8dip"
-                android:textColor="#fff"/>
+                android:textSize="8dip"/>
         </LinearLayout>
 
         <LinearLayout
@@ -61,12 +60,13 @@
                 android:id="@+id/btnNews"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btnnews" />
+                android:background="@drawable/newsactive" />
             <TextView 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/news"
-                android:textSize="8dip"/>
+                android:textSize="8dip"
+                android:textColor="#fff"/>
         </LinearLayout>
 
         <LinearLayout
