--- a/android/Euro2012/res/layout/news.xml
+++ b/android/Euro2012/res/layout/news.xml
@@ -64,12 +64,10 @@
         	        </LinearLayout>
         	        
         	    </LinearLayout>
-        	    <LinearLayout android:layout_width="fill_parent" android:layout_height="0dip"
-        	        android:layout_weight="625" android:layout_margin="10dip">
-        	        <TextView android:layout_width="fill_parent" android:layout_height="fill_parent"
-        	            android:textColor="#000"
-        	            android:id="@+id/txtcontent"/>
-        	    </LinearLayout>
+       	        <WebView android:layout_width="fill_parent" android:layout_height="0dip"
+       	        	android:layout_weight="625" android:layout_margin="10dip"
+       	            android:textColor="#000"
+       	            android:id="@+id/txtcontent"/>
         	</LinearLayout>
         </ViewFlipper>
         
